[project]
name = "schema_exporter"
version = "0.2.0"
authors = [
    { name="Santeri Oksanen", email="santerioksanen@gmail.com" }
]
description = "Export Marshamallow schemas and Django rest framework serializers as Typescripr interfaces or Rust structs."
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/santerioksanen/marshmallow-export"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "Django==4.1.7",
    "django-stubs==1.15.0",
    "djangorestframework==3.14.0",
    "djangorestframework-stubs==1.9.1",
    "marshmallow==3.19.0",
    "marshmallow-enum==1.5.1",
    "mypy==1.0.1",
    "isort",
    "black",
    "build",
    "twine",
    "pytest==7.4.0",
]